--- a/Pipfile
+++ b/Pipfile
@@ -5,8 +5,10 @@ name = "pypi"
 
 [packages]
 ipdb = "*"
+sqlalchemy = "*"
+alembic = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.8"
+python_version = "3.12.3"
