--- a/lib/db/alembic.ini
+++ b/lib/db/alembic.ini
@@ -84,7 +84,8 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = sqlite:///smart_farm.db
+
+sqlalchemy.url = sqlite:///%(here)s/smart_farm.db
 
 
 [post_write_hooks]
